# VideoEditor

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/zzh/videoeditor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/common/: log.h
app/src/main/cpp/gles/: Beauty.cpp  Beauty.h  EGLCore.h  GLDemo.h  gles.cpp  glutil.h
app/src/main/java/cn/zzh/videoeditor/: BaseActivity.java  BaseApplication.java  MainActivity.java
app/src/main/java/cn/zzh/videoeditor/activity/: HomeActivity.java  RecordActivity.java
app/src/main/java/cn/zzh/videoeditor/util/: CameraHelper.java  ToastHelper.java  Utils.java
app/src/main/java/cn/zzh/videoeditor/view/: CameraView.java
app/src/main/res/drawable/: img_editor_selector.xml  img_player_selector.xml  img_recorder_selector.xml
app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_record.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml
app/src/test/java/cn/zzh/videoeditor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
